--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.18",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.22.2",
+    "sort-by": "^1.2.0",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
