--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.51.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.2",
+    "recharts": "^2.12.2",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
