--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "create-backend-server": "^1.1.0",
