--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.7",
