--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "type": "module",
+  "license":"UNLICENSED",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
