--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.2",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.2",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.2.1",
