--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "create-backend-server": "^1.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "shadcn-ui": "^0.8.0"
