--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "embla-carousel-react": "^8.2.0",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.439.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
@@ -47,7 +48,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.2",
     "react-toastify": "^10.0.5",
-    "recharts": "^2.12.2",
+    "recharts": "^2.12.7",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
